Page Layout Bugfixes

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -12,18 +12,19 @@
   content: '';
   display: table;
 }
-.style-heading {
-  border-bottom: 1px solid #ccc;
+.style-content {
+  border-top: 1px solid #ccc;
 }
 @media screen and (min-width: 768px) {
   .style-heading {
-    width: 33.3333%;
+    width: 25%;
     float: left;
-    border-bottom: none;
-    border-right: 1px solid #ccc;
+
   }
   .style-content {
-    width: 66.6666%;
+    width: 75%;
     float: left;
+    border-top: none;
+    border-left: 1px solid #ccc;
   }
 }
